--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "strapi-provider-email-resend-strapi",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Strapi Resend provider for Strapi",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "push": "npm version patch && git push",
+    "push-minor": "npm version minor && git push",
+    "push-major": "npm version major && git push"
+  },
   "dependencies": {
-    "@react-email/render": "^0.0.14",
     "resend": "^3.2.0"
   },
   "author": "Sahil Dave",
